# Resume-Optimiser

./: .env.example  .gitignore  README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/routers/: edit.py  format.py  parse.py  pdf.py  tailor.py
backend/app/core/: config.py  exceptions.py  logging.py  operation_log.py
backend/app/models/domain/: __init__.py  diff.py  jd.py  resume.py  template.py
backend/app/services/ingestion/: docx_extractor.py  ingestion_service.py  pdf_extractor.py  txt_extractor.py
backend/app/services/llm/: client.py  jd_analyzer.py  resume_parser.py  template_extractor.py
backend/app/services/rendering/: latex_formatter.py  pdf_compiler.py  template_formatter.py
backend/app/services/storage/: html_extractor.py  url_fetcher.py
backend/app/services/tailoring/: diff_utils.py  orchestrator.py  prompts.py
backend/app/services/tailoring/tools/: base.py  (+5 more)
backend/app/services/template/: content_mapper.py
backend/app/templates/: resume.tex
backend/tests/: conftest.py
backend/tests/e2e/: test_docker_stack.py
backend/tests/integration/: test_edit_endpoint.py  test_full_flow.py  test_parse_endpoint.py  test_pdf_endpoint.py  test_tailor_endpoint.py
backend/tests/unit/: test_diff_utils.py  test_html_extractor.py  test_ingestion_service.py  test_jd_analyzer.py  test_latex_formatter.py  test_operation_log.py  test_orchestrator.py  test_pdf_compiler.py  test_resume_parser.py  test_tailoring_tools.py  test_template_extractor.py  test_template_formatter.py  test_url_fetcher.py
(+62 files in other folders)
