[project]
name = "resume-optimiser-backend"
version = "0.1.0"
description = "FastAPI backend for AI-powered resume customization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "groq>=0.13.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-magic>=0.4.27",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "structlog>=24.4.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: tests that require docker compose services running",
]
